--- a/src/PathfindingVisualizer/Node/Node.css
+++ b/src/PathfindingVisualizer/Node/Node.css
@@ -1,6 +1,6 @@
 .node {
-    width: 40px;
-    height: 40px;
+    width: 20px;
+    height: 20px;
     outline: 1px solid grey;
-    display: inline;
+    display: inline-block;
 }
