--- a/src/PathfindingVisualizer/Node/Node.css
+++ b/src/PathfindingVisualizer/Node/Node.css
@@ -1,6 +1,6 @@
 .node {
-  width: 20px;
-  height: 20px;
+  width: 25px;
+  height: 25px;
   outline: 1px solid grey;
   display: inline-block;
 }
@@ -11,4 +11,7 @@
 
 .node-start {
   background-color: green;
+}
+
+.node-visited {
 }
