--- a/src/PathfindingVisualizer/Node/Node.css
+++ b/src/PathfindingVisualizer/Node/Node.css
@@ -14,4 +14,60 @@
 }
 
 .node-visited {
+  animation-name: visitedAnimation;
+  animation-duration: 1.5s;
+  animation-timing-function: ease-out;
+  animation-delay: 0;
+  animation-direction: alternate;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  animation-play-state: running;
+}
+
+@keyframes visitedAnimation {
+  0% {
+    transform: scale(0.3);
+    background-color: black;
+    border-radius: 100%;
+  }
+  50% {
+    background-color: lightskyblue;
+  }
+  75% {
+    transform: scale(1.2);
+    background-color: lightgreen;
+  }
+  100% {
+    transform: scale(1);
+    background-color: green;
+  }
+}
+
+.node-wall {
+  background-color: blueviolet;
+}
+
+.node-shortest-path {
+  animation-name: shortestPath;
+  animation-duration: 1.5s;
+  animation-timing-function: ease-out;
+  animation-delay: 0;
+  animation-direction: alternate;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+@keyframes shortestPath {
+  0% {
+    transform: scale(0.6);
+    background-color: lightgoldenrodyellow;
+  }
+  50% {
+    transform: scale(1.2);
+    background-color: lightgoldenrodyellow;
+  }
+  100% {
+    transform: scale(1);
+    background-color: lightgoldenrodyellow;
+  }
 }
